add_subdirectory(asyncqueue)
add_subdirectory(linearsystem)
add_subdirectory(codegen)
add_subdirectory(memoryarena)
add_subdirectory(reflectory)
add_subdirectory(pythonargs)
add_subdirectory(gtk3gl)
add_subdirectory(overflow)
add_subdirectory(locale)
add_subdirectory(gitscript)
# add_subdirectory(xmlvalidate)
add_subdirectory(runtest)
add_subdirectory(ddff)
add_subdirectory(crc-ccitt)
add_subdirectory(asynclist)
