[project]
name = "pyddff"
version = "0.9"
description = "Pure python interface to reading ddff files"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = 'René van Paassen', email = 'rene.vanpaassen@gmail.com' }
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: EUPL License",
    "Operating System :: OS Independent" ]

[license]
text = "EUPL 1.2"

[dependencies]
msgpack-python = "^1.0.3"
crcmod = "1.7"

[build-system]
requires = [
    "setuptools >= 44",
    "wheel"
]
build-backend = "setuptools.build_meta"
