find_package(DuecaCodegen)
set(DCOSOURCES PrimaryControls.dco)
#message(STATUS "${DCOSOURCES}")
DUECACODEGEN_TARGET(OUTPUT DCO INDUECA DCOSOURCE ${DCOSOURCES})
#message(STATUS "${DCO_OUTPUT_SOURCE} ${DCO_OUTPUT_HEADERS}")
add_custom_target(dco_doc ALL
  DEPENDS ${DCO_OUTPUT_SOURCE} ${DCO_OUTPUT_HEADERS})
