if(BUILD_GTK2)
  add_subdirectory(gtk2)
endif()
if(BUILD_GTKMM)
  add_subdirectory(gtkmm)
endif()
if(BUILD_GTK3)
  add_subdirectory(gtk3)
endif()
if(BUILD_GTKMM3)
  add_subdirectory(gtkmm3)
endif()
if(BUILD_GTK4)
  add_subdirectory(gtk4)
endif()
if(BUILD_GTKMM4)
  add_subdirectory(gtkmm4)
endif()
if(BUILD_GLUT)
  add_subdirectory(glut)
endif()
if(BUILD_GLUTGUI)
  add_subdirectory(glut-gui)
endif()
if(BUILD_FLTK)
  add_subdirectory(fltk)
endif()

