if(BUILD_GTK2 AND BUILD_GTKGLEXT)
  add_subdirectory(gtk2)
endif()
if(BUILD_GTKMM AND BUILD_GTKGLEXT)
  add_subdirectory(gtkmm)
endif()
if(BUILD_GTK3)
  add_subdirectory(gtk3)
endif()
if(BUILD_GTK4)
  add_subdirectory(gtk4)
endif()
if(BUILD_GLFW)
  add_subdirectory(glfw)
endif()
#if(BUILD_GTKMM4)
#  add_subdirectory(gtkmm4)
#endif()
if(BUILD_GLUT)
  add_subdirectory(glut)
endif()
if(BUILD_GLUTGUI)
  add_subdirectory(glut-gui)
endif()
if(BUILD_FLTK)
  add_subdirectory(fltk)
endif()
if(BUILD_X11GL)
  add_subdirectory(X11)
endif()
